grails 5 gorm 7.2 (#534)
* CompileStatic with groovy3

* cleanup logging